# get_next_line

./: .gitignore  README.md  create_lst_tests.c  get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_util.c  get_next_line_utils.c  get_next_line_utils_bonus.c  gnl_bk.c  main.c  main_bonus.c  main_bp.c  ptr_test.c  read_tests.c  te.c  test  test.c  test_1.c  valgrind-out.txt
bk/: get_next_line.c  get_next_line_utils.c  main.c
bp/: get_next_line.c  get_next_line.h
create_lst_tests.dSYM/Contents/: Info.plist
create_lst_tests.dSYM/Contents/Resources/DWARF/: create_lst_tests
files/: test
for_submit/: get_next_line copy.c  get_next_line.h  get_next_line_utils.c
gnl_new/: get_next_line.c  get_next_line.h
gnl_tester/: CMakeLists.txt  gtest.cpp
sandbox/: free_test.c  free_test_2.c  pointer.c
sub/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c  main.c
